fix error send html code
