# docs/swagger.json
@@ -6,14 +6,14 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "localhost:8080",
     "basePath": "/",
     "paths": {
         "/send-email": {
             "post": {
                 "description": "Sending HTML email using SMTP with access code validation",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data",
+                    "application/x-www-form-urlencoded"
                 ],
                 "produces": [
                     "application/json"
@@ -24,13 +24,52 @@
                 "summary": "Send HTML emails",
                 "parameters": [
                     {
-                        "description": "Request payload",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.SendEmailRequest"
-                        }
+                        "type": "string",
+                        "default": "your_access_code_here",
+                        "description": "Access Code",
+                        "name": "accessCode",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "your-email@example.com",
+                        "description": "Email Sender",
+                        "name": "emailSender",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "your_app_password",
+                        "description": "Sender Password",
+                        "name": "senderPassword",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "recipient@example.com",
+                        "description": "Email Recipient",
+                        "name": "emailRecipient",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "Testing Email",
+                        "description": "Subject",
+                        "name": "subject",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "\u003chtml\u003e\u003cbody\u003e\u003ch1\u003eHello World\u003c/h1\u003e\u003c/body\u003e\u003c/html\u003e",
+                        "description": "HTML Body",
+                        "name": "body",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -71,43 +110,6 @@
                 },
                 "message": {
                     "type": "string"
-                }
-            }
-        },
-        "models.SendEmailRequest": {
-            "type": "object",
-            "required": [
-                "accessCode",
-                "body",
-                "emailRecipient",
-                "emailSender",
-                "senderPassword",
-                "subject"
-            ],
-            "properties": {
-                "accessCode": {
-                    "type": "string",
-                    "example": "your_access_code_here"
-                },
-                "body": {
-                    "type": "string",
-                    "example": "\u003chtml\u003e\u003cbody\u003e\u003ch1\u003eHello World\u003c/h1\u003e\u003c/body\u003e\u003c/html\u003e"
-                },
-                "emailRecipient": {
-                    "type": "string",
-                    "example": "recipient@example.com"
-                },
-                "emailSender": {
-                    "type": "string",
-                    "example": "your-email@example.com"
-                },
-                "senderPassword": {
-                    "type": "string",
-                    "example": "your_app_password"
-                },
-                "subject": {
-                    "type": "string",
-                    "example": "Testing Email"
                 }
             }
         },
